fix(ci): point to branch name instead of commits

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,9 @@ jobs:
           - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - name: asdf_plugin_test
+      - name: asdf plugin test
         uses: asdf-vm/actions/plugin-test@v4
         with:
           command: terramaid version
+          version: 2.6.2
+          gitref: ${{ github.head_ref || github.ref_name }}
